# financial-control

./: .env.example  .gitignore  manage.py  pyproject.toml  requirements.txt
financial_control/: asgi.py  settings.py  urls.py  wsgi.py
financial_control/main/: admin.py  apps.py  context_processors.py  forms.py  managers.py  models.py  urls.py  views.py
financial_control/main/facade/: __init__.py
financial_control/main/migrations/: 0001_initial.py  0002_alter_record_options_alter_record_table.py  0003_recordentry.py  0004_alter_recordentry_options_alter_recordentry_april_and_more.py  0005_record_user.py  0006_recordentry_entry_type.py
financial_control/main/templates/: base.html  datatable_translation.html  entries_table_snippet.html  index.html  navbar.html
financial_control/main/templates/main/components/: entry_accordion.html
financial_control/main/templates/main/dashboard/: entries_table_snippet.html  entry_point.html  expenses.html  graph_month_snippet.html  incomes.html  main.html
financial_control/main/templates/main/record/: create.html  detail.html  edit.html  table_entries_snippet.html
financial_control/main/templates/main/record_entry/: create.html  edit.html  form.html
financial_control/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
financial_control/users/migrations/: 0001_initial.py
financial_control/users/templates/: login.html  register.html
financial_control/users/templates/users/: base.html  form.html  login.html  register.html
static/: package-lock.json  package.json
static/custom/: main.css
