[tool.poetry]
name = "financial_control"
version = "0.1.0"
description = ""
authors = ["Pedro Belo <pedrobelo.na@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
black = "^22.10.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
